Added function list users and show single user
